# LiMo

./: CITATION.cff  README.md  README.org  benchmark.py  benchmark.sh  combined.pgf  compile.sh  debug.sh  diff.txt  dotsdot0.dot  drawdot.sh  extra.py  generated.tex  gpt.py  idea.org  idea.tex  limousine_result.csv  on-the-fly-cover.org  plot.py  plot_both.py  plot_comprehensive.py  plot_minimal.py  plot_relative.py  plot_small.py  run_implementations.sh  small.pgf  test.py  testhist.hist  tex_hist.sh  timeline.sty  viol.hist  violin_result.csv
.cache/clangd/index/: algorithm.hpp.94C4D0169D617569.idx  backoffelim.cpp.CC3D5FAF31B4E7BF.idx  benchmark.cpp.0BBD666DC639D0B2.idx  bound.cpp.D6B26D51D8776102.idx  builder.hpp.88193FB7CB7DA770.idx  coarse_queue.cpp.CC19DC3806A81DE3.idx  coarse_stack.cpp.1B6410D80E122057.idx  convert.cpp.61398FE78CC79E48.idx  convert.h.7F6C0B05749C91E0.idx  coverhistory.cpp.63132177DB48EBF0.idx  coverhistory.h.14008E0A89ADF504.idx  coverlin.cpp.D988EFF27A805831.idx  covermonitor.cpp.75AAA0FBCCC0B2F7.idx  covermonitor.h.80E428E99E0AF692.idx  data_monitor.cpp.1DFA32A69F33EA91.idx  data_monitor.hpp.8D4AFAE2D65B6AB0.idx  elim_backoff.cpp.6A179079B7540054.idx  elimbackoff.cpp.EE95D2F8A47DA7BF.idx  event.cpp.085D3E493B89F9BC.idx  event.h.1DE291BD3A6FD24E.idx  exception.h.61266B90E9E51027.idx  execution.hpp.2E93FBAFA5F422A0.idx  generation.cpp.EF7D60D061E2A425.idx  generator.cpp.66F53AFBEA40964A.idx  generator.hpp.E68CD35A141F116D.idx  graph.cpp.40565F6D22247161.idx  graph.hpp.F06FE5CF19EC2C17.idx  graphmonitor.cpp.90E29CAD1E9ED810.idx  graphmonitor.hpp.17EEC39ED43FF18B.idx  history.cpp.073F72FA220CD4E0.idx  history.h.F8710882D01819F8.idx  hwqueue.cpp.56011802AD24E3E7.idx  impl.h.3158CAE4D1E0F94F.idx  interval.cpp.1D4A5639235CFF76.idx  interval.cpp.6BE2BF14272FF74F.idx  interval.h.34A10EB149762752.idx  interval_tree.cpp.D7E63D84997DE57D.idx  interval_tree.hpp.6475C83E716B49E9.idx  io.cpp.BF04B7CDB3CE0EA8.idx  io.h.6149AA47841BAA03.idx  (+46 more)
Theory/: lake-manifest.json  lakefile.toml
dots/: dot0.dot  dot1.dot  dot2.dot  dot4.dot
histories/simple/durable_stack/safe/: basic.hist
histories/simple/durable_stack/violation/: basic.hist
histories/simple/queue/safe/: ScalObject-msq.00.hist  ScalObject-msq.00.hist.bak  ScalObject-msq.01.hist  ScalObject-msq.01.hist.bak  ScalObject-msq.02.hist  ScalObject-msq.02.hist.bak  ScalObject-msq.03.hist  ScalObject-msq.03.hist.bak  ScalObject-msq.04.hist  ScalObject-msq.04.hist.bak.bak  ScalObject-msq.05.hist  ScalObject-msq.05.hist.bak.bak  ScalObject-msq.06.hist.bak  ScalObject-msq.06.hist.bak.bak  ScalObject-msq.07.hist  ScalObject-msq.07.hist.bak.bak  ScalObject-msq.08.hist  ScalObject-msq.08.hist.bak  ScalObject-msq.09.hist  ScalObject-msq.09.hist.bak.bak  ScalObject-msq.10.hist  ScalObject-msq.10.hist.bak  ScalObject-msq.11.hist.bak  ScalObject-msq.11.hist.bak.bak  ScalObject-msq.12.hist  ScalObject-msq.12.hist.bak.bak  ScalObject-msq.13.hist  ScalObject-msq.13.hist.bak  ScalObject-msq.14.hist  ScalObject-msq.14.hist.bak  ScalObject-msq.15.hist  ScalObject-msq.15.hist.bak  ScalObject-msq.16.hist  ScalObject-msq.16.hist.bak  ScalObject-msq.17.hist.bak  ScalObject-msq.17.hist.bak.bak  (+165 more)
lean/: core.lean
mismatches/: 0.hist  1.hist  10.hist  100.hist  1000.hist  10000.hist  10001.hist  10002.hist  10003.hist  10004.hist  10005.hist  10006.hist  10007.hist  10008.hist  10009.hist  1001.hist  10010.hist  10011.hist  10012.hist  10013.hist  10014.hist  10015.hist  10016.hist  10017.hist  10018.hist  10019.hist  1002.hist  10020.hist  10021.hist  10022.hist  10023.hist  10024.hist  10025.hist  10026.hist  10027.hist  10028.hist  10029.hist  1003.hist  10030.hist  10031.hist  (+26422 more)
proof/: .CoqMakefile.d  CoqMakeFile  CoqMakeFile.conf  CoqMakefile.conf  _CoqProject
proof/theories/: .core.aux  core.v  linearizability.v
suites/: comprehensive.txt  minimal.txt
tool/: CMakeLists.txt
tool/automata_checker/: CMakeLists.txt
tool/automata_checker/src/: main.cpp
tool/backup/: boundsystem.cpp  constraintmonitor.cpp  constraintmonitor.hpp  segmentsystem.cpp
tool/builder/: CMakeLists.txt
tool/builder/src/: main.cpp
tool/events/: CMakeLists.txt
tool/events/src/: convert.cpp  coverhistory.cpp  event.cpp  interval.cpp  io.cpp  operation.cpp  parser.cpp  preproces.cpp  typedef.cpp  util.cpp
tool/exhaustive/: CMakeLists.txt
tool/exhaustive/src/: main.cpp
tool/generator/: CMakeLists.txt
tool/generator/src/: main.cpp
tool/impl/: CMakeLists.txt  backoffelim.cpp  coarse_queue.cpp  elim_backoff.cpp  elimbackoff.cpp  hwqueue.cpp  msqueue.cpp  serial.cpp  treiber.cpp  treiber_notempty.cpp  tsstack.cpp  tsstack_unlin.cpp
tool/include/: algorithm.hpp  builder.hpp  convert.h  coverhistory.h  covermonitor.h  event.h  exception.h  execution.hpp  generator.hpp  history.h  impl.h  interval.h  interval_tree.hpp  intervaltree.hpp  io.h  logic.hpp  macros.h  monitor.hpp  node_dag.hpp  node_graph.hpp  operation.h  parser.h  progressbar.hpp  queuehistory.h  relation.h  results.hpp  segment.hpp  segmentizer.hpp  suite.hpp  templates.cpp  typedef.h  util.h
tool/include/monitor/: covermonitor.h  data_monitor.hpp  graph.hpp  graphmonitor.hpp  persistent.hpp  pop_node.hpp  queuemonitor.hpp  segmentmonitor.hpp  setmonitor.h  setmonitor.hpp  treemonitor.hpp  val_node.hpp
tool/linearize/: .ccls  CMakeLists.txt
tool/linearize/src/: main.cpp
tool/logic/: CMakeLists.txt
tool/logic/src/: bound.cpp  relation.cpp  term.cpp  termio.cpp
tool/monitor/: CMakeLists.txt
tool/monitor/src/: coverlin.cpp  covermonitor.cpp  data_monitor.cpp  graph.cpp  graphmonitor.cpp  interval_tree.cpp  monitor.cpp  persistent_monitor.cpp  queuemonitor.cpp  segmentizer.cpp  treemonitor.cpp
tool/random/: CMakeLists.txt  benchmark.cpp
tool/random/src/: benchmark.cpp  generator.cpp  main.cpp
tool/runner/: CMakeLists.txt
tool/runner/src/: main.cpp
tool/test/: CMakeLists.txt
tool/test/src/: generation.cpp  interval.cpp  logic.cpp  propagation.cpp  regex.cpp  relation.cpp  restriction.cpp  subsumption.cpp
util/: tex2standalone.py  texhist.py
(+58 files in other folders)
